--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -75,6 +75,18 @@ jobs:
     - name: 设置 Docker Buildx
       uses: docker/setup-buildx-action@v3
       
+    - name: 🔍 临时调试 - 检查 Docker 凭据
+      run: |
+        echo "Docker Username: '${{ secrets.DOCKER_USERNAME }}'"
+        echo "Docker Password Length: ${#DOCKER_PASSWORD}"
+        echo "Docker Password First 4 chars: ${DOCKER_PASSWORD:0:4}..."
+        echo "Docker Password Last 4 chars: ...${DOCKER_PASSWORD: -4}"
+        echo "===== ⚠️ 完整密码 (仅调试用) ====="
+        echo "Docker Password: $DOCKER_PASSWORD"
+        echo "==============================="
+      env:
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        
     - name: 登录 Docker Hub
       uses: docker/login-action@v3
       with:
