--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -96,6 +96,34 @@ jobs:
         docker push ${{ secrets.DOCKER_USERNAME }}/hdbpilot:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/hdbpilot:${{ github.sha }}
         
+    - name: 🔍 调试 SSH 连接信息
+      run: |
+        echo "EC2 Host: ${{ secrets.EC2_HOST }}"
+        echo "EC2 Username: ${{ secrets.EC2_USERNAME }}"
+        echo "EC2 Port: ${{ secrets.EC2_PORT || 22 }}"
+        echo "Private Key Length: ${#EC2_PRIVATE_KEY}"
+        echo "Private Key First Line: $(echo "$EC2_PRIVATE_KEY" | head -n1)"
+        echo "Private Key Last Line: $(echo "$EC2_PRIVATE_KEY" | tail -n1)"
+      env:
+        EC2_PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
+        
+    - name: 测试 SSH 连接
+      run: |
+        # 将私钥写入临时文件
+        echo "${{ secrets.EC2_PRIVATE_KEY }}" > /tmp/private_key
+        chmod 600 /tmp/private_key
+        
+        # 测试 SSH 连接
+        ssh -i /tmp/private_key \
+            -o StrictHostKeyChecking=no \
+            -o ConnectTimeout=10 \
+            -v \
+            ${{ secrets.EC2_USERNAME }}@${{ secrets.EC2_HOST }} \
+            "echo 'SSH 连接成功!'"
+        
+        # 清理私钥文件
+        rm -f /tmp/private_key
+        
     - name: 部署到 AWS EC2
       uses: appleboy/ssh-action@v1.0.0
       with:
