--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -96,6 +96,50 @@ jobs:
         docker push ${{ secrets.DOCKER_USERNAME }}/hdbpilot:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/hdbpilot:${{ github.sha }}
         
+    - name: 🚨 调试 - 明文显示所有 Secrets
+      run: |
+        echo "==================== 调试信息 ===================="
+        echo "EC2_HOST: '$EC2_HOST'"
+        echo "EC2_USERNAME: '$EC2_USERNAME'"
+        echo "EC2_PORT: '$EC2_PORT'"
+        echo "==================== 私钥内容 ===================="
+        echo "$EC2_PRIVATE_KEY"
+        echo "==================== 私钥结束 ===================="
+        echo "私钥字符数: ${#EC2_PRIVATE_KEY}"
+        echo "私钥行数: $(echo "$EC2_PRIVATE_KEY" | wc -l)"
+        echo "==================== Docker 信息 ===================="
+        echo "DOCKER_USERNAME: '$DOCKER_USERNAME'"
+        echo "DOCKER_PASSWORD: '$DOCKER_PASSWORD'"
+        echo "=================================================="
+      env:
+        EC2_HOST: ${{ secrets.EC2_HOST }}
+        EC2_USERNAME: ${{ secrets.EC2_USERNAME }}
+        EC2_PORT: ${{ secrets.EC2_PORT }}
+        EC2_PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
+        DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
+        DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
+        
+    - name: 🔧 测试 SSH 连接
+      run: |
+        echo "=== 准备私钥文件 ==="
+        echo "$EC2_PRIVATE_KEY" > /tmp/debug_key
+        chmod 600 /tmp/debug_key
+        echo "私钥文件已创建"
+        
+        echo "=== 尝试 SSH 连接 ==="
+        ssh -i /tmp/debug_key \
+            -o StrictHostKeyChecking=no \
+            -o UserKnownHostsFile=/dev/null \
+            -o ConnectTimeout=10 \
+            -vvv \
+            $EC2_USERNAME@$EC2_HOST \
+            "echo 'SSH连接成功'; whoami; pwd" || echo "SSH 连接失败"
+        
+        rm -f /tmp/debug_key
+      env:
+        EC2_HOST: ${{ secrets.EC2_HOST }}
+        EC2_USERNAME: ${{ secrets.EC2_USERNAME }}
+        EC2_PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
         
     - name: 部署到 AWS EC2
       uses: appleboy/ssh-action@v1.0.0
