--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/hdbPilot?useSSL=false&serverTimezone=UTC
     username: root
-    password: 021129@mjl
+    password: rootpassword
     driver-class-name: com.mysql.cj.jdbc.Driver
   sql:
     init:
