feat: 实现添加、编辑、删除房源功能 - 后端API实现
- 添加 PropertyController 的 CRUD 操作 (POST, PUT, DELETE, GET)
- 实现 PropertyService 的业务逻辑
- 添加数据验证 (PropertyRequest 使用 @Valid 注解)
- 更新数据库配置
- 添加必要的依赖 (spring-boot-starter-validation)

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,11 @@
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
 		</dependency>
+		<!-- Spring Boot Validation -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
 		<!-- Swagger API 文档 -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
