--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/hdbPilot?useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://localhost:3306/hdbPilot?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
     password: rootpassword
     driver-class-name: com.mysql.cj.jdbc.Driver
