--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,3 +13,8 @@ mybatis-plus:
   type-aliases-package: com.iss.hdbPilot.model.entity
   configuration:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+spring:
+  # Profiles 配置：指定默认激活的环境为 dev (开发环境)
+  profiles:
+    active: dev
