--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/hdbPilot?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
-    password: rootpassword 
+    password: Zyz20022201045
     driver-class-name: com.mysql.cj.jdbc.Driver
 
 # 开发环境日志配置
