fix: 修复数据库密码

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,5 +2,5 @@ spring:
   datasource:
     url: jdbc:mysql://mysql-hdbpilot:3306/hdbPilot?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
-    password: Zyz20022201045 
+    password: rootpassword
     driver-class-name: com.mysql.cj.jdbc.Driver
