--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/hdbPilot?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
     username: root
-    password: Zyz20022201045
+    password: rootpassword
     driver-class-name: com.mysql.cj.jdbc.Driver
   # Profiles 配置：指定默认激活的环境为 dev (开发环境)
   profiles:
