--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,3 +1,12 @@
+# 自定义的应用属性，用于配置AWS S3
+aws:
+  s3:
+    bucket-name: "hdb-pilot"
+  region: "ap-southeast-1"  # 你的S3存储桶所在的区域
+  credentials:
+    access-key: "AKIA5DFOLTC7LLUDPLFW"
+    secret-key: "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"
+
 server:
   port: 8080
 
@@ -10,6 +19,10 @@ spring:
   # Profiles 配置：指定默认激活的环境为 dev (开发环境)
   profiles:
     active: dev
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 50MB
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/*.xml
