--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,28 +1,28 @@
 # 自定义的应用属性，用于配置AWS S3
 aws:
   s3:
-    bucket-name: "hdb-pilot"
-  region: "ap-southeast-1"  # 你的S3存储桶所在的区域
+    bucket-name: ${AWS_S3_BUCKET:hdb-pilot}
+  region: ${AWS_REGION:ap-southeast-1}
   credentials:
-    access-key: "AKIA5DFOLTC7LLUDPLFW"
-    secret-key: "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"
+    access-key: ${AWS_ACCESS_KEY:}
+    secret-key: ${AWS_SECRET_KEY:}
 
 server:
-  port: 8080
+  port: ${SERVER_PORT:8080}
 
 spring:
   datasource:
-    url: jdbc:mysql://localhost:3306/hdbPilot?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
-    username: root
-    password: rootpassword
+    url: ${DB_URL:jdbc:mysql://localhost:3306/hdbPilot?useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true}
+    username: ${DB_USERNAME:root}
+    password: ${DB_PASSWORD:}
     driver-class-name: com.mysql.cj.jdbc.Driver
   # Profiles 配置：指定默认激活的环境为 dev (开发环境)
   profiles:
-    active: dev
+    active: ${SPRING_PROFILES_ACTIVE:dev}
   servlet:
     multipart:
-      max-file-size: 10MB
-      max-request-size: 50MB
+      max-file-size: ${MAX_FILE_SIZE:10MB}
+      max-request-size: ${MAX_REQUEST_SIZE:50MB}
 
 mybatis-plus:
   mapper-locations: classpath:/mapper/*.xml
