--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -53,8 +53,7 @@ jobs:
       uses: returntocorp/semgrep-action@v1
       with:
         config: auto
-        entryPoint: semgrep ci
-        args: --sarif --output=semgrep-report.sarif
+        args: ci --sarif --output=semgrep-report.sarif
 
     - name: Upload Semgrep report
       uses: actions/upload-artifact@v4
